Fix layout issues

--- a/0x06-responsive_design/02-1-styles.css
+++ b/0x06-responsive_design/02-1-styles.css
@@ -215,7 +215,20 @@ ul.row {
 }
 @media (max-width: 767px){
     :root{
-        
+        --section-padding: 5rem 1.5rem;
+        --section-body-padding: 2rem 0 0;
+    }
+    .ul.row,
+    .row{
+        flex-direction: column;
+        margin: 0;
+    }
+    [class*='^col-']{
+        margin: 0 0 3rem 0;
+    }
+    .col-1-3,
+    .col-1-2{
+     width: 100%;
     }
 }
 /* Navbar
@@ -265,6 +278,11 @@ ul.row {
 .nav .nav-item:hover .nav-link::before {
     background-color: var(--color-primary);
     width: 100%;
+}
+@media (max-width: 767px){
+    .navbar-menu{
+        display: none;
+    }
 }
 
 /* Header
